[package]
name = "nx-object"
version = "0.1.0"
edition = "2024"

[lib]
name = "nx_object"
crate-type = ["rlib"]
test = false
doctest = false
bench = false

[features]
default = ["panic-handler"]
## Panic handler for no_std targets
panic-handler = ["dep:nx-panic-handler"]
## Write layer with filesystem support
std = ["dep:fs-err", "dep:sha2"]
## NSO compression/decompression
lz4 = ["std", "dep:lz4_flex"]
## ELF parsing for NRO/NSO generation
elf = ["std", "dep:object"]

[dependencies]
bitflags = "2.9"
fs-err = { version = "3.1", optional = true }
lz4_flex = { version = "0.11", optional = true, default-features = false }
nx-panic-handler = { version = "0.1.0", path = "../nx-panic-handler", optional = true }
object = { version = "0.38", optional = true, default-features = false, features = ["read", "elf"] }
sha2 = { version = "0.10", optional = true, default-features = false }
static_assertions = "1.1"
thiserror = { version = "2.0", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
