[package]
name = "nx-rand"
version = "0.1.0"
edition = "2024"

[lib]
name = "nx_rand"
crate-type = ["rlib"]
test = false
doctest = false
bench = false

[features]
# Enable the __nx_rand FFI
ffi = []

[dependencies]
nx-panic-handler = { version = "0.1.0", path = "../nx-panic-handler" }
nx-svc = { version = "0.1.0", path = "../nx-svc" }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
static_assertions = "1.1.0" 
