[package]
name = "nx-rt"
version = "0.1.0"
edition = "2024"

[lib]
name = "nx_rt"
crate-type = ["rlib"]
test = false
doctest = false
bench = false

[features]
ffi = []

[dependencies]
nx-alloc = { version = "0.1.0", path = "../nx-alloc" }
nx-panic-handler = { version = "0.1.0", path = "../nx-panic-handler" }
nx-service-apm = { version = "0.1.0", path = "../nx-service-apm" }
nx-service-applet = { version = "0.1.0", path = "../nx-service-applet" }
nx-service-hid = { version = "0.1.0", path = "../nx-service-hid" }
nx-service-set = { version = "0.1.0", path = "../nx-service-set" }
nx-service-sm = { version = "0.1.0", path = "../nx-service-sm" }
nx-service-time = { version = "0.1.0", path = "../nx-service-time" }
nx-sf = { version = "0.1.0", path = "../nx-sf" }
nx-std-sync = { version = "0.1.0", path = "../nx-std-sync" }
nx-svc = { version = "0.1.0", path = "../nx-svc" }
nx-sys-mem = { version = "0.1.0", path = "../nx-sys-mem" }
nx-sys-sync = { version = "0.1.0", path = "../nx-sys-sync" }
nx-sys-thread = { version = "0.1.0", path = "../nx-sys-thread" }
nx-sys-thread-tls = { version = "0.1.0", path = "../nx-sys-thread-tls" }
thiserror = { version = "2", default-features = false }
