[package]
name = "nx-service-set"
version = "0.1.0"
edition = "2024"

[lib]
name = "nx_service_set"
crate-type = ["rlib"]
test = false
doctest = false
bench = false

[dependencies]
nx-panic-handler = { version = "0.1.0", path = "../nx-panic-handler" }
nx-service-sm = { version = "0.1.0", path = "../nx-service-sm" }
nx-sf = { version = "0.1.0", path = "../nx-sf" }
nx-svc = { version = "0.1.0", path = "../nx-svc" }
nx-sys-thread-tls = { version = "0.1.0", path = "../nx-sys-thread-tls" }
static_assertions = "1"
thiserror = { version = "2", default-features = false }
